--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "jetifier": "^1.6.1",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.0",
     "react-native-gesture-handler": "^1.3.0",
