--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,6 +30,8 @@ target 'myapp' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'myappTests' do
     inherit! :search_paths
     # Pods for testing
