--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "16.8.6",
     "react-native": "0.60.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-svg": "^9.5.1",
+    "react-native-svg-charts": "^5.2.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
