Add package for airtable

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "airtable": "^0.6.0",
     "jetifier": "^1.6.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
